k8s/payment-v2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service-v2
  namespace: shopfast
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
      version: v2
  template:
    metadata:
      labels:
        app: payment-service
        version: v2
    spec:
      containers:
        - name: payment-service
          image: shopfast/payment:v2
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
