k8s/payment-destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: payment-service
  namespace: shopfast

spec:
  host: payment-service

  subsets:

  - name: v1
    labels:
      version: v1

  - name: v2
    labels:
      version: v2
