k8s/payment-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: payment-service
  namespace: shopfast

spec:
  hosts:
    - payment-service

  http:
    - route:

      - destination:
          host: payment-service
          subset: v1
        weight: 90

      - destination:
          host: payment-service
          subset: v2
        weight: 10
